Some error fixing